# ckanext-scheme-sddi

./: CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  test.ini
ckanext/scheme_sddi/: cli.py  helpers.py  plugin.py  schema.xml  sddi_dataset.yaml  sddi_device.yaml  sddi_digital_twin.yaml  sddi_geoobject.yaml  sddi_method.yaml  sddi_online_application.yaml  sddi_online_service.yaml  sddi_project.yaml  sddi_software.yaml  validators.py  views.py
ckanext/scheme_sddi/assets/: script.js  webassets.yml
ckanext/scheme_sddi/logic/: action.py  auth.py  schema.py  validators.py
ckanext/scheme_sddi/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/scheme_sddi/tests/logic/: test_action.py  test_auth.py  test_validators.py
