[metadata]
name = ckanext-scheme-sddi
version = 0.0.1
description = This extension is designed to extend the schema plugins developed and maintained by the community to enable SDDI framework functions. (Further descriptions of the functions will be added as functions are added or changed).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chair of Geoinformatics, Technical University of Munich/ckanext-scheme-sddi
author = Marija Knezevic
author_email = marija.knezevic@tum.de
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN SDDI SDDI-CKAN SDDI-Katalog

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             scheme_sddi = ckanext.scheme_sddi.plugin:SchemeSddiPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/scheme_sddi/i18n/ckanext-scheme_sddi.pot
width = 80

[init_catalog]
domain = ckanext-scheme_sddi
input_file = ckanext/scheme_sddi/i18n/ckanext-scheme_sddi.pot
output_dir = ckanext/scheme_sddi/i18n

[update_catalog]
domain = ckanext-scheme_sddi
input_file = ckanext/scheme_sddi/i18n/ckanext-scheme_sddi.pot
output_dir = ckanext/scheme_sddi/i18n
previous = true

[compile_catalog]
domain = ckanext-scheme_sddi
directory = ckanext/scheme_sddi/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
